--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                     srclang="English"
                     label="English Captions"
                     />
+                    <track
+                    src="assets\text-tracks\pigeons-in-love-French.vtt"
+                    kind="captions"
+                    srclang="fn"
+                    label="French Captions"
+                    />
             </video>
         </div>
     </main>
